--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/dynamixel_sdk
-	previous = 
-	base = 81ced5ea6708
+	previous = 81ced5ea6708
+	base = 89ea65a88f25
 	trim = 
 	trimbase = 
