--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/dynamixel_sdk_examples
-	previous = 
-	base = 3b84d7bfd76d
+	previous = 3b84d7bfd76d
+	base = d732441793a6
 	trim = 
 	trimbase = 
