--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/dynamixel_sdk
+	parent = release/rolling/dynamixel_sdk/3.7.40-5
 	previous = 81ced5ea6708
 	base = f5040899bba1
 	trim = 
