--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/dynamixel_sdk_custom_interfaces
+	parent = release/rolling/dynamixel_sdk_custom_interfaces/3.7.40-5
 	previous = ab4bda85874e
 	base = e3bb7916abd9
 	trim = 
