--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/dynamixel_sdk_examples
+	parent = release/rolling/dynamixel_sdk_examples/3.7.40-5
 	previous = 3b84d7bfd76d
 	base = 552b2a210c89
 	trim = 
